--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,28 @@ body {
 .weather-box {
   width: clamp(380px, 50vw, 1200px);
   height: clamp(500px, 80vh, 800px);
-  background: rgba(255, 255, 255, 0.15); 
-  backdrop-filter: blur(10px); 
-  border: 1px solid rgba(255, 255, 255, 0.3); 
-  border-radius: 20px; 
-  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.25); 
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 20px;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.25);
+  padding: 50px;
 }
 
+.city-input {
+  width: 100%;
+  padding: 10px 16px;
+  border-radius: 90px;
+  border: 3px solid transparent;
+  background: rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2),
+    inset 0 1px 1px rgba(255, 255, 255, 0.3);
+  font-weight: 500;
+  transition: 0.25s border;
+}
+
+
+.city-input::placeholder {
+  color: rgb(70, 70, 70, 0.85);
+}
